create artmap page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,7 +14,7 @@
         <a class="nav-link" routerLink='/works' routerLinkActive="active">ArtMarket</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='/location' routerLinkActive="active">ArtMap</a>
+        <a class="nav-link" routerLink='/artmap' routerLinkActive="active">ArtMap</a>
       </li>
       <li *ngIf="isUserLoggedIn" class="nav-item">
         <a class="nav-link" routerLink='/collection' routerLinkActive="active">MyCollection</a>
