--- a/src/app/pages/artmap/artmap.component.scss
+++ b/src/app/pages/artmap/artmap.component.scss
@@ -1,7 +1,7 @@
 .preview-container {
   width: 1440px;
   height: 100%;
-  background-color: white;
+  background-color: #f9f9fb;
   margin: 0 auto;
   padding: 20px;
 }
@@ -42,8 +42,20 @@
 }
 
 .search-container {
-  padding-left: 0px;
+  padding-left: 20px;
   display: flex;
+}
+
+.form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 14px;
+  height: 14px;
+  line-height: 53px;
+  text-align: center;
+  pointer-events: none;
+  color: #aaa;
 }
 
 input {
@@ -52,6 +64,7 @@ input {
   font-size: 14px;
   line-height: 17px;
   opacity: 0.4;
+  padding-left: 26px;
 }
 
 #search {
@@ -394,23 +407,22 @@ agm-map {
 }
 
 :host ::ng-deep div.ng-select-container.ng-has-value span.ng-arrow-wrapper span.ng-arrow {
-  border: solid black;
+  border: solid #7976FF;
   border-width: 0 1px 1px 0;
   display: inline-block;
   padding: 3px;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-  border-color: #7976FF;
 }
 
 :host ::ng-deep .ng-select-opened>div.ng-select-container.ng-has-value span.ng-arrow-wrapper span.ng-arrow {
-  border: solid black;
+  border: solid #7976FF;
   border-width: 0 1px 1px 0;
   display: inline-block;
   padding: 3px;
   transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
-  border-color: #7976FF;
+  top: 0px;
 }
 
 :host ::ng-deep ng-dropdown-panel div.ng-dropdown-panel-items.scroll-host {
