--- a/src/app/pages/artdatabase/artdatabase.component.html
+++ b/src/app/pages/artdatabase/artdatabase.component.html
@@ -26,7 +26,7 @@
             </span>
           </a>
         </li>
-         <li class="" >
+        <li class="" >
           <a  class="m-auto " data-toggle="tab" (click)="changeTab('exhibitions')" [ngClass]="{'active': seletedTab === 'exhibitions'}">
             <span class="menu-item">
               Exhibitions
@@ -55,9 +55,9 @@
           </a>
         </li>
         <li class="">
-          <a  class="m-auto" data-toggle="tab" (click)="changeTab('discussions')" [ngClass]="{'active': seletedTab === 'discussions'}">
+          <a  class="m-auto" data-toggle="tab" (click)="changeTab('events')" [ngClass]="{'active': seletedTab === 'events'}">
             <span class="menu-item">
-              Discussions
+              Events
             </span>
           </a>
         </li>
@@ -474,31 +474,55 @@
               </div>
             </div>
           </div>
-          <div class="artworks-section col-12">
-            <div class="title-content row">
-              <div class="main-title">Artworks Near You</div>
-            </div>
-            <div class="row artworks-content">
-              <div class="row card card-content other-content" *ngFor="let artwork of artworks; let i = index" [ngClass]="i%3==2? 'third-child': ''">
-                <div class="image-content">
-                  <img src="../../../assets/imgs/Img1.jpg">
+          <div class="row view-section">
+            <div class="card sidebar-section"></div>
+            <div class="card right-section">
+              <div class="row artworks-content">
+                <div class="row card-content other-content" *ngFor="let artwork of artworks | paginate: config let i = index" [ngClass]="i%3==2? 'third-child': ''">
+                  <div class="image-content">
+                    <img src="../../../assets/imgs/Img1.jpg">
+                  </div>
+                  <div class="label-content otherlabel-content">
+                    <div class="label-title">
+                      {{artwork.title}}
+                    </div>
+                    <div class="label-detail">
+                      <span>Taipei Fine Arts Museum</span>
+                      <br>
+                      <span>401 North Michigan Avenue,</span>
+                      <br>
+                      <span>Chicago, IL 60611</span>
+                    </div>
+                    <div class="label-more">
+                      View details
+                    </div>
+                  </div>
                 </div>
-                <div class="label-content">
-                  <div class="label-title">
-                    {{artwork.title}}
-                  </div>
-                  <div class="label-detail">
-                    <span>Joel Reynolds</span>
-                    <br>
-                    <span>Taipei Fine Arts Museum</span>
-                    <br>
-                    <span>401 North Michigan Avenue, Chicago, IL 60611</span>
-                    <br>
-                    <span>09.00 AM - 07.00 PM</span>
-                  </div>
-                  <div class="label-more">
-                    View details
-                  </div>
+              </div>
+              <div class="pagination-section">
+                <div class="pagination-label">Showing {{totalResults}} results</div>
+                <div class="spacer"></div>
+                <div class="pagination-content">
+                  <pagination-template #p="paginationApi"
+                     [id]="config.id"
+                     (pageChange)="pageChanged($event)">
+                    <div class="custom-pagination">
+                      <div class="pagination-previous" [class.disabled]="p.isFirstPage()">
+                        <a *ngIf="!p.isFirstPage()" (click)="p.previous()"><i class="fas fa-chevron-left"></i></a>
+                      </div>
+                      <div *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                        <a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
+                          <span>{{ page.label }}</span>
+                        </a>
+                        <div *ngIf="p.getCurrent() === page.value">
+                          <span>{{ page.label }}</span>
+                        </div>
+                      </div>
+                      <div class="pagination-next" [class.disabled]="p.isLastPage()">
+                          <a *ngIf="!p.isLastPage()" (click)="p.next()"><i class="fas fa-chevron-right"></i></a>
+                      </div>
+                    </div>
+                  </pagination-template>
                 </div>
               </div>
             </div>
@@ -541,31 +565,55 @@
               </div>
             </div>
           </div>
-          <div class="artworks-section col-12">
-            <div class="title-content row">
-              <div class="main-title">Exhibitions Near You</div>
-            </div>
-            <div class="row artworks-content">
-              <div class="row card card-content other-content" *ngFor="let exhibition of exhibitions; let i = index" [ngClass]="i%3==2? 'third-child': ''">
-                <div class="image-content">
-                  <img src="../../../assets/imgs/Img5.jpg">
+          <div class="row view-section">
+            <div class="card sidebar-section"></div>
+            <div class="card right-section">
+              <div class="row artworks-content">
+                <div class="row card-content other-content" *ngFor="let exhibition of exhibitions | paginate: config let i = index" [ngClass]="i%3==2? 'third-child': ''">
+                  <div class="image-content">
+                    <img src="../../../assets/imgs/Img2.jpg">
+                  </div>
+                  <div class="label-content otherlabel-content">
+                    <div class="label-title">
+                      {{exhibition.title}}
+                    </div>
+                    <div class="label-detail">
+                      <span>17 Jun 2020 - 20 Jun 2020</span>
+                      <br>
+                      <span>401 North Michigan Avenue,</span>
+                      <br>
+                      <span>Chicago, IL 60611</span>
+                    </div>
+                    <div class="label-more">
+                      View details
+                    </div>
+                  </div>
                 </div>
-                <div class="label-content">
-                  <div class="label-title">
-                    {{exhibition.title}}
-                  </div>
-                  <div class="label-detail">
-                    <span>12 Jun 2020 - 20 Jun 2020</span>
-                    <br>
-                    <span>Taipei Fine Arts Museum</span>
-                    <br>
-                    <span>401 North Michigan Avenue, Chicago, IL 60611</span>
-                    <br>
-                    <span>09.00 AM - 07.00 PM</span>
-                  </div>
-                  <div class="label-more">
-                    View details
-                  </div>
+              </div>
+              <div class="pagination-section">
+                <div class="pagination-label">Showing {{totalResults}} results</div>
+                <div class="spacer"></div>
+                <div class="pagination-content">
+                  <pagination-template #p="paginationApi"
+                     [id]="config.id"
+                     (pageChange)="pageChanged($event)">
+                    <div class="custom-pagination">
+                      <div class="pagination-previous" [class.disabled]="p.isFirstPage()">
+                        <a *ngIf="!p.isFirstPage()" (click)="p.previous()"><i class="fas fa-chevron-left"></i></a>
+                      </div>
+                      <div *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                        <a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
+                          <span>{{ page.label }}</span>
+                        </a>
+                        <div *ngIf="p.getCurrent() === page.value">
+                          <span>{{ page.label }}</span>
+                        </div>
+                      </div>
+                      <div class="pagination-next" [class.disabled]="p.isLastPage()">
+                          <a *ngIf="!p.isLastPage()" (click)="p.next()"><i class="fas fa-chevron-right"></i></a>
+                      </div>
+                    </div>
+                  </pagination-template>
                 </div>
               </div>
             </div>
@@ -605,27 +653,53 @@
               </div>
             </div>
           </div>
-          <div class="artworks-section col-12">
-            <div class="title-content row">
-              <div class="main-title">Museums Near You</div>
-            </div>
-            <div class="row artworks-content">
-              <div class="row card card-content other-content" *ngFor="let museum of museums; let i = index" [ngClass]="i%3==2? 'third-child': ''">
-                <div class="image-content">
-                  <img src="../../../assets/imgs/Img3.jpg">
+          <div class="row view-section">
+            <div class="card sidebar-section"></div>
+            <div class="card right-section">
+              <div class="row artworks-content">
+                <div class="row card-content other-content" *ngFor="let museum of museums | paginate: config let i = index" [ngClass]="i%3==2? 'third-child': ''">
+                  <div class="image-content">
+                    <img src="../../../assets/imgs/Img3.jpg">
+                  </div>
+                  <div class="label-content otherlabel-content">
+                    <div class="label-title">
+                      {{museum.title}}
+                    </div>
+                    <div class="label-detail">
+                      <span>401 North Michigan Avenue,</span>
+                      <br>
+                      <span>Chicago, IL 60611</span>
+                    </div>
+                    <div class="label-more">
+                      View details
+                    </div>
+                  </div>
                 </div>
-                <div class="label-content">
-                  <div class="label-title">
-                    {{museum.title}}
-                  </div>
-                  <div class="label-detail">
-                    <span>401 North Michigan Avenue, Chicago, IL 60611</span>
-                    <br>
-                    <span>09.00 AM - 07.00 PM</span>
-                  </div>
-                  <div class="label-more">
-                    View details
-                  </div>
+              </div>
+              <div class="pagination-section">
+                <div class="pagination-label">Showing {{totalResults}} results</div>
+                <div class="spacer"></div>
+                <div class="pagination-content">
+                  <pagination-template #p="paginationApi"
+                     [id]="config.id"
+                     (pageChange)="pageChanged($event)">
+                    <div class="custom-pagination">
+                      <div class="pagination-previous" [class.disabled]="p.isFirstPage()">
+                        <a *ngIf="!p.isFirstPage()" (click)="p.previous()"><i class="fas fa-chevron-left"></i></a>
+                      </div>
+                      <div *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                        <a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
+                          <span>{{ page.label }}</span>
+                        </a>
+                        <div *ngIf="p.getCurrent() === page.value">
+                          <span>{{ page.label }}</span>
+                        </div>
+                      </div>
+                      <div class="pagination-next" [class.disabled]="p.isLastPage()">
+                          <a *ngIf="!p.isLastPage()" (click)="p.next()"><i class="fas fa-chevron-right"></i></a>
+                      </div>
+                    </div>
+                  </pagination-template>
                 </div>
               </div>
             </div>
@@ -665,27 +739,53 @@
               </div>
             </div>
           </div>
-          <div class="artworks-section col-12">
-            <div class="title-content row">
-              <div class="main-title">Galleries Near You</div>
-            </div>
-            <div class="row artworks-content">
-              <div class="row card card-content other-content" *ngFor="let gallery of galleries; let i = index" [ngClass]="i%3==2? 'third-child': ''">
-                <div class="image-content">
-                  <img src="../../../assets/imgs/Img2.jpg">
+          <div class="row view-section">
+            <div class="card sidebar-section"></div>
+            <div class="card right-section">
+              <div class="row artworks-content">
+                <div class="row card-content other-content" *ngFor="let gallery of galleries | paginate: config let i = index" [ngClass]="i%3==2? 'third-child': ''">
+                  <div class="image-content">
+                    <img src="../../../assets/imgs/Img4.jpg">
+                  </div>
+                  <div class="label-content otherlabel-content">
+                    <div class="label-title">
+                      {{gallery.title}}
+                    </div>
+                    <div class="label-detail">
+                      <span>401 North Michigan Avenue,</span>
+                      <br>
+                      <span>Chicago, IL 60611</span>
+                    </div>
+                    <div class="label-more">
+                      View details
+                    </div>
+                  </div>
                 </div>
-                <div class="label-content">
-                  <div class="label-title">
-                    {{gallery.title}}
-                  </div>
-                  <div class="label-detail">
-                    <span>401 North Michigan Avenue, Chicago, IL 60611</span>
-                    <br>
-                    <span>09.00 AM - 07.00 PM</span>
-                  </div>
-                  <div class="label-more">
-                    View details
-                  </div>
+              </div>
+              <div class="pagination-section">
+                <div class="pagination-label">Showing {{totalResults}} results</div>
+                <div class="spacer"></div>
+                <div class="pagination-content">
+                  <pagination-template #p="paginationApi"
+                     [id]="config.id"
+                     (pageChange)="pageChanged($event)">
+                    <div class="custom-pagination">
+                      <div class="pagination-previous" [class.disabled]="p.isFirstPage()">
+                        <a *ngIf="!p.isFirstPage()" (click)="p.previous()"><i class="fas fa-chevron-left"></i></a>
+                      </div>
+                      <div *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                        <a (click)="p.setCurrent(page.value)" *ngIf="p.getCurrent() !== page.value">
+                          <span>{{ page.label }}</span>
+                        </a>
+                        <div *ngIf="p.getCurrent() === page.value">
+                          <span>{{ page.label }}</span>
+                        </div>
+                      </div>
+                      <div class="pagination-next" [class.disabled]="p.isLastPage()">
+                          <a *ngIf="!p.isLastPage()" (click)="p.next()"><i class="fas fa-chevron-right"></i></a>
+                      </div>
+                    </div>
+                  </pagination-template>
                 </div>
               </div>
             </div>
@@ -694,8 +794,8 @@
         <div id="auctions" [ngClass]="{'active': seletedTab === 'auctions'}" class="tab-pane ">
           Auctions
         </div>
-        <div id="discussions" [ngClass]="{'active': seletedTab === 'discussions'}" class="tab-pane ">
-          Discussions
+        <div id="events" [ngClass]="{'active': seletedTab === 'events'}" class="tab-pane ">
+          Events
         </div>
       </div>
     </div>
