--- a/src/app/pages/artdatabase/artdatabase.component.scss
+++ b/src/app/pages/artdatabase/artdatabase.component.scss
@@ -1,6 +1,5 @@
 .main-container {
   width: 1440px;
-  height: 1921px;
   margin: 0 auto;
   padding: 20px 20px 50px 20px;
   background-color: #f9f9fb;
@@ -281,7 +280,6 @@ input {
 
 .artworks-content {
   width: 100%;
-  height: 160px;
   margin: 0px;
   padding: 0px !important;
   display: flex;
@@ -405,9 +403,92 @@ input {
 }
 
 .third-child {
-  margin: 0px;
+  margin-right: 0px !important;
 }
 
 .other-content {
+  width: 370px;
   margin-bottom: 20px;
+  margin-right: 15px;
+}
+
+.otherlabel-content {
+  width: 200px;
+}
+
+.right-section {
+  width: 1142px;
+  margin: 0px;
+  padding: 0px;
+  border-color: #EFEFEF;
+  position: relative;
+}
+
+.sidebar-section {
+  width: 240px;
+  margin-right: 18px;
+  height: 1182px;
+  border-color: #EFEFEF;
+}
+
+.view-section {
+  width: 1400px;
+  margin: 20px auto;
+  padding: 0px;
+  display: flex;
+}
+
+.pagination-section {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+}
+
+.pagination-label {
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+:host ::ng-deep pagination-template div.custom-pagination {
+  display: flex;
+  max-width: 238px;
+  margin: auto;
+}
+:host ::ng-deep pagination-template div.custom-pagination>div {
+  flex: 1;
+  font-size: 12px;
+  font-weight: 500;
+  text-align: center;
+  font-family: "Brave Sans";
+  line-height: 26px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+}
+:host ::ng-deep pagination-template div.custom-pagination>div.current {
+  border-radius: 4px;
+  background-color: #7976ff;
+}
+:host ::ng-deep pagination-template div.custom-pagination div.pagination-previous {
+  border-radius: 4px;
+  box-shadow: 0px 0px 0px 1.5px #7976ff;
+  margin-right: 10px;
+  color: #7976FF;
+}
+:host ::ng-deep pagination-template div.custom-pagination div.pagination-previous.disabled {
+  display: none;
+}
+:host ::ng-deep pagination-template div.custom-pagination div.pagination-next {
+  border-radius: 4px;
+  box-shadow: 0px 0px 0px 1.5px #7976ff;
+  margin-left: 10px;
+  color: #7976FF;
+}
+:host ::ng-deep pagination-template div.custom-pagination div.pagination-next.disabled {
+  display: none;
 }
