--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="d-flex login-holder">
-      <button *ngIf="!isUserLoggedIn" type="button" class="btn btn-warning button-login" routerLink="/login" routerLinkActive="active">Login</button>
+      <button *ngIf="!isUserLoggedIn" type="button" class="btn btn-warning button-login" routerLink="/signin" routerLinkActive="active">Login</button>
       <button *ngIf="isUserLoggedIn" type="button" class="btn btn-warning button-login" (click)="logout()" routerLinkActive="active">Logout</button>
     </div>
 
