--- a/src/app/pages/artdatabase/artdatabase.component.scss
+++ b/src/app/pages/artdatabase/artdatabase.component.scss
@@ -2,20 +2,7 @@
   width: 1440px;
   margin: 0 auto;
   padding: 20px 20px 50px 20px;
-  background-color: #f9f9fb;
-}
-
-.banner-container {
-  margin: 0 auto;
-  width: 1400px;
-  height: 230px;
-}
-
-.banner-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
+  background-color: #ffffff;
 }
 
 .tab-container {
@@ -65,7 +52,7 @@ li:hover span.menu-item, a.active span.menu-item {
   cursor: pointer;
   border-bottom: 2px solid #7976ff;
   opacity: 1;
-  color: #444444;
+  color: #7976ff;
   font-family: "Brave Sans";
   font-size: 16px;
   font-weight: 500;
@@ -76,190 +63,28 @@ li:hover span.menu-item, a.active span.menu-item {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  padding: 0px;
+  padding: 0px 100px;
 }
 
-.search-section {
-  overflow: visible;
+.item-content {
   width: 100%;
-  height: 57px;
   padding: 0px;
-  margin: 20px 0px 0px 0px;
-  border-color: #EFEFEF;
-}
-
-.grid-divider {
-  position: relative;
-  margin: 0px;
-  height: 100%;
-}
-
-.grid-divider > [class*="col-"]:nth-child(n + 2):after {
-  content: "";
-  background-color: #EFEFEF;
-  position: absolute;
-  top: 10px;
-  bottom: 10px;
-
-  @media (max-width: 767px) {
-    width: 100%;
-    height: 1px;
-    left: 0;
-    top: -4px; // quickfix to center line between columns
-  }
-  @media (min-width: 768px) {
-    width: 1px;
-    height: auto;
-    left: -1px; // quickfix to hide divider on left side
-  }
-}
-
-.search-container {
-  padding-left: 20px;
-  display: flex;
-}
-
-.form-control-feedback {
-  position: absolute;
-  z-index: 2;
-  display: block;
-  width: 14px;
-  height: 14px;
-  line-height: 53px;
-  text-align: center;
-  pointer-events: none;
-  color: #aaa;
-}
-
-input {
-  font-family: FontAwesome, "Brave Sans";
-  color: #111111;
-  font-size: 14px;
-  line-height: 17px;
-  opacity: 0.4;
-  padding-left: 26px;
-}
-
-#search {
-  margin: auto;
-  width: 560px;
-  border: 0px;
-  outline: none !important;
-  box-shadow: inset 0 0px 0 #ddd;
-}
-
-:host ::ng-deep div.ng-select-container {
-  border: 0px;
-  box-shadow: inset 0 0px 0 #ddd !important;
-}
-
-:host ::ng-deep div.ng-select-container.ng-has-value div.ng-value-container {
-  color: #7976FF;
-  font-family: "Brave Sans";
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-}
-
-:host ::ng-deep div.ng-select-container.ng-has-value span.ng-clear-wrapper {
-  display: none;
-}
-
-.location-label {
-	color: #444444;
-	font-family: "Brave Sans";
-	font-size: 14px;
-  line-height: 24px;
-  margin: auto;
-}
-
-.location-content {
-  width: 100%;
-  margin: auto;
-  color: #7976FF;
-  font-family: "Brave Sans";
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-  box-shadow: inset 0 0px 0 #ddd;
-}
-
-:host ::ng-deep div.ng-select-container.ng-has-value span.ng-arrow-wrapper span.ng-arrow {
-  border: solid #7976FF;
-  border-width: 0 1px 1px 0;
-  display: inline-block;
-  padding: 3px;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-
-:host ::ng-deep .ng-select-opened>div.ng-select-container.ng-has-value span.ng-arrow-wrapper span.ng-arrow {
-  border: solid #7976FF;
-  border-width: 0 1px 1px 0;
-  display: inline-block;
-  padding: 3px;
-  transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
-  top: 0px;
-}
-
-:host ::ng-deep ng-dropdown-panel div.ng-dropdown-panel-items.scroll-host {
-  overflow: visible;
-  max-height: 300px;
-  border: 0px;
-  border-color: #EFEFEF;
-}
-
-:host ::ng-deep ng-select ng-dropdown-panel {
-  border-color: #EFEFEF;
-}
-
-:host ::ng-deep ng-select ng-dropdown-panel.ng-select-bottom {
-  border-top-color: #EFEFEF;
-}
-
-.selectbox-content {
-  height: 100%;
-  padding-right: 0px;
-  display: flex;
-}
-
-.advance-content {
-  line-height: 53px;
-  height: 100%;
-}
-
-.advance-content img {
-  width: 18px;
-  height: 17px;
-  cursor: pointer;
-}
-
-.artworks-section {
-  width: 100%;
-  height: 200px;
-  padding: 0px;
-  margin: 50px 0px 0px 0px;
-}
-
-.artworks-section:nth-last-child(4) {
   margin: 30px 0px 0px 0px;
+  font-family: "Brave Sans";
+  color: #444444;
 }
 
 .main-title {
-	color: #444444;
-	font-family: "Brave Sans";
-	font-size: 18px;
+	font-size: 17px;
 	font-weight: 500;
   line-height: 20px;
 }
 
 .viewmore-title {
   color: #7976FF;
-  font-family: "Brave Sans";
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 500;
-  line-height: 17px;
+  line-height: 16px;
   text-align: right;
 }
 
@@ -270,7 +95,7 @@ input {
 
 .title-content {
   margin: 0px 0px 20px 0px;
-  padding: 0px 10px;
+  padding: 0px;
   width: 100%;
 }
 
@@ -278,7 +103,7 @@ input {
   flex-grow: 1;
 }
 
-.artworks-content {
+.item-section {
   width: 100%;
   margin: 0px;
   padding: 0px !important;
@@ -286,12 +111,10 @@ input {
 }
 
 .card-content {
-  width: 450px;
-  height: 160px;
+  width: 270px;
   border-color: #EFEFEF;
-  padding: 10px;
-  margin: 0px 25px 0px 0px;
-  border-radius: 4px;
+  padding: 0px;
+  margin: 0px 40px 0px 0px;
   box-sizing: border-box;
 }
 
@@ -300,106 +123,47 @@ input {
 }
 
 .image-content {
-  width: 140px;
-  height: 138px;
+  width: 270px;
+  height: 150px;
   padding: 0px;
-  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .image-content img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 4px;
 }
 
 .label-content {
   color: #444444;
-  width: 280px;
   font-family: "Brave Sans";
-  position: relative;
-  height: 100%;
-}
-
-.label-title {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  margin-bottom: 6px;
 }
 
 .label-detail {
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 13px;
+  line-height: 16px;
 }
 
-.label-more {
-  position: absolute;
-  width: 100%;
-  color: #7976FF;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 15px;
-  bottom: 0px;
-  text-align: right;
+.star-section {
+  width: 20px;
+  height: 20px;
+}
+
+.star-section i {
+  width: 15px;
+  height: 15px;
+  color: #7976ff;
   cursor: pointer;
 }
 
-.artists-section {
-  width: 100%;
-  height: 356px;
-  margin: 50px 0px 0px 0px;
-  padding: 0px;
+.star-content {
+  display: flex;
 }
 
-.artists-content {
-  width: 100%;
-  height: 315px;
-  margin: 0px;
-  padding: 0px;
-}
-
-.profile-section {
-  width: 260px;
-  height: 100%;
-  padding: 0px;
-  margin: 0px 25px 0px 0px;
-}
-
-.profile-section:nth-last-child(1) {
-  margin: 0px;
-}
-
-.profile-image {
-  width: 100%;
-  height: 261px;
-  margin-bottom: 9px;
-}
-
-.profile-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-}
-
-.profile-label {
-  color: #444444;
-  font-family: "Brave Sans";
-  width: 100%;
-  height: 100%;
-}
-
-.profile-title {
-  margin-bottom: 2px;
-  font-size: 16px;
+.artist-label {
+  color: #7976FF;
   font-weight: 500;
-  line-height: 24px;
-}
-
-.profile-detail {
-  font-size: 12px;
-  line-height: 18px;
 }
 
 .third-child {
@@ -407,42 +171,71 @@ input {
 }
 
 .other-content {
-  width: 370px;
-  margin-bottom: 20px;
-  margin-right: 15px;
+  margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .otherlabel-content {
   width: 200px;
 }
 
-.right-section {
-  width: 1142px;
+.list-section {
+  width: 870px;
   margin: 0px;
   padding: 0px;
-  border-color: #EFEFEF;
   position: relative;
 }
 
 .sidebar-section {
-  width: 240px;
-  margin-right: 18px;
+  width: 300px;
+  margin-right: 30px;
   height: 1182px;
-  border-color: #EFEFEF;
+  padding: 0px;
+  background-color: white;
 }
 
 .view-section {
-  width: 1400px;
-  margin: 20px auto;
+  margin: 30px auto;
   padding: 0px;
   display: flex;
 }
 
+.page-title {
+	color: #444444;
+	font-family: "Brave Sans";
+	font-size: 13px;
+  line-height: 16px;
+}
+
+.selectbox-content {
+  height: 16px;
+  display: flex;
+}
+
+.sort-label {
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: normal;
+}
+
+.sort-content {
+	color: #7976FF;
+	font-family: "Brave Sans";
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 16px;
+}
+
+.pagination-content {
+  margin-right: 20px;
+}
+
 .pagination-section {
-  position: absolute;
-  bottom: 0px;
+  margin-top: 30px;
   width: 100%;
-  padding: 10px 20px;
+  padding: 0px;
   display: flex;
 }
 
@@ -456,7 +249,7 @@ input {
 
 :host ::ng-deep pagination-template div.custom-pagination {
   display: flex;
-  max-width: 238px;
+  max-width: 300px;
   margin: auto;
 }
 :host ::ng-deep pagination-template div.custom-pagination>div {
@@ -475,20 +268,295 @@ input {
   background-color: #7976ff;
 }
 :host ::ng-deep pagination-template div.custom-pagination div.pagination-previous {
-  border-radius: 4px;
-  box-shadow: 0px 0px 0px 1.5px #7976ff;
-  margin-right: 10px;
+  margin-right: 50px;
   color: #7976FF;
 }
 :host ::ng-deep pagination-template div.custom-pagination div.pagination-previous.disabled {
   display: none;
 }
 :host ::ng-deep pagination-template div.custom-pagination div.pagination-next {
-  border-radius: 4px;
-  box-shadow: 0px 0px 0px 1.5px #7976ff;
   margin-left: 10px;
   color: #7976FF;
 }
 :host ::ng-deep pagination-template div.custom-pagination div.pagination-next.disabled {
   display: none;
+}
+
+:host ::ng-deep div.ng-select-container.ng-has-value {
+  min-height: 16px !important;
+  height: 16px;
+  border: 0px;
+  box-shadow: inset 0 0px 0 #ddd !important;
+  min-width: 85px;
+  border-radius: 0px;
+}
+
+:host ::ng-deep div.ng-select-container.ng-has-value div.ng-value-container {
+  max-height: 16px !important;
+  height: 16px;
+}
+
+:host ::ng-deep div.ng-select-container.ng-has-value div.ng-value-container {
+  color: #7976FF;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+:host ::ng-deep div.ng-select-container.ng-has-value div.ng-value-container div.ng-input {
+  display: none;
+}
+
+:host ::ng-deep div.ng-select-container.ng-has-value span.ng-clear-wrapper {
+  display: none;
+}
+
+:host ::ng-deep div.ng-select-container.ng-has-value span.ng-arrow-wrapper span.ng-arrow {
+  border: solid #7976FF;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  top: -3px;
+}
+
+:host ::ng-deep .ng-select-opened>div.ng-select-container.ng-has-value span.ng-arrow-wrapper span.ng-arrow {
+  border: solid #7976FF;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  top: 0px;
+}
+
+:host ::ng-deep ng-dropdown-panel div.ng-dropdown-panel-items.scroll-host {
+  overflow: visible;
+  text-align: left;
+  min-width: 80px;
+}
+
+:host ::ng-deep ng-select ng-dropdown-panel {
+  border-color: #EFEFEF;
+  margin-top: -15px;
+}
+
+:host ::ng-deep ng-select ng-dropdown-panel.ng-select-bottom {
+  border-top-color: #EFEFEF;
+}
+
+:host ::ng-deep a i.right-arrow {
+  color: white !important;
+  opacity: 1 !important;
+  margin: auto;
+}
+
+.previous-label {
+  color: #7976FF;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 16px;
+  margin: 0px 10px;
+}
+
+.next-label {
+  color: #7976FF;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 25px;
+  margin-right: 10px;
+}
+
+.pagination-next a {
+  display: flex;
+  line-height: 16px;
+}
+
+.pagination-next a i {
+  line-height: 26px;
+}
+
+.input-label {
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.has-search {
+  width: 100%;
+  height: 38px;
+  padding: 0px;
+  margin-bottom: 30px;
+}
+
+.has-search input {
+  margin-top: 20px;
+  width: 100%;
+  outline: 0px;
+  padding-left: 2.375rem;
+  height: 38px;
+  border-radius: 2px;
+  border: 1px solid #DFE3E8;
+  box-shadow: inset 0 0px 0 #ddd;
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+  color: #aaa;
+}
+
+.normal-search {
+  width: 100%;
+  margin: 0px;
+}
+
+.panel-title a {
+  color: #444444;
+  font-family: "Brave Sans";
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 18px;
+}
+
+.panel-title a:hover {
+  text-decoration: none;
+}
+
+.panel-title {
+  margin-bottom: 0px;
+  vertical-align: middle;
+  line-height: 18px;
+}
+
+.extension-icon i {
+  line-height: 24px;
+  cursor: pointer;
+}
+.panel-group {
+  margin-bottom: 10px;
+}
+
+.container {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  color: #444444;
+	font-size: 13px;
+  line-height: 16px;
+  margin: 0px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #eee;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #7976ff;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  left: 5px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 1px 1px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.check-section {
+  position: relative;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.checkbox-search {
+  max-height: 100px;
+  overflow: auto;
+}
+
+.select {
+	box-sizing: border-box;
+	height: 38px;
+	width: 300px;
+	border: 1px solid #DFE3E8;
+	border-radius: 2px;
+	background: linear-gradient(180deg, #FFFFFF 0%, #EFEFEF 100%);
+}
+
+.plus {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background:
+    linear-gradient(#444444,#444444),
+    linear-gradient(#444444,#444444);
+  background-position: center;
+  background-size: 50% 2px,2px 50%;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.minus {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: linear-gradient(#444444,#444444);
+  background-position: center;
+  background-size: 50% 2px,2px 50%;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
