add list view of Museums

--- a/src/app/pages/artdatabase/artdatabase.component.scss
+++ b/src/app/pages/artdatabase/artdatabase.component.scss
@@ -560,3 +560,7 @@ li:hover span.menu-item, a.active span.menu-item {
   background-repeat: no-repeat;
   cursor: pointer;
 }
+
+.sub-detail {
+  opacity: 0.5;
+}
